--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=illitru41@gmail.com
+spring.mail.password=rehan29@
 spring.mail.protocol=smtp
 ############ JWT Properties #####################
 jwt.expiration.time=90000
