signature algorithm RSA 512 added along with keystore file to get the jwt token on login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 ############# Mail Properties ###########################################
 spring.mail.host=smtp.mailtrap.io
-spring.mail.port=25
-spring.mail.username=illitru41@gmail.com
-spring.mail.password=rehan29@
+spring.mail.port=2525
+spring.mail.username=07fa3e1b8fc318
+spring.mail.password=b67834dc6423af
 spring.mail.protocol=smtp
+# spring.mail.properties.mail.smtp.auth=true
 ############ JWT Properties #####################
 jwt.expiration.time=90000
 
